# vibomat

./: .dockerignore  .env.example  .geminiignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AI_INTEGRATION_PLAN.md  APP_REGISTRATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GEMINI.md  Makefile  README.md  SECURITY_ADVISORY_python_multipart.md  SETUP.md  TECHNICAL_DEBT.md  TODO.md  capture_login.py  changes.diff  docker-compose.override.yml  docker-compose.yml  main.py  metadata_verifier.py  playlist_schema.json  pyproject.toml  railway.json  release-please-config.json  spotify_playlist_builder.py  test_spotify_playlist_builder.py
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  doc-agent.yml  main.yml  publish.yml
backend/: Dockerfile
backend/app/: exceptions.py  main.py
backend/app/admin/: auth.py  views.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  integrations.py  playlists.py  users.py
backend/app/core/: config.py  distributed_lock.py  error_sanitizer.py  logging.py  rate_limit.py  tasks.py
backend/app/core/auth/: backend.py  fastapi_users.py  manager.py  oauth.py
backend/app/core/utils/: email.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0256a14dd6ff_merge_user_identity_and_deleted_at.py  064b94329b13_add_total_duration_ms.py  09010338c349_add_public_profile_and_social_features.py  284fa97d5297_add_playlist_status_and_provider_fields.py  313c5b58af43_add_ai_interaction_embedding_table.py  61c06cf72635_add_oauth_accounts.py  62c91989979d_add_market_to_service_connection.py  68ccdee09f17_add_tsvector_columns_for_fts.py  69789f1cfee8_add_hnsw_index_to_ai_interaction_.py  6bc45d120926_backfill_market_for_existing_connections.py  6cc33370c404_enable_postgres_extensions.py  7317f7390757_alter_credentials_to_encrypted_string.py  cfe0aee7e7f0_initial_squash.py  (+10 more)
backend/app/middleware/: __init__.py  exception_handler.py
backend/app/models/: __init__.py  ai_log.py  metadata.py  playlist.py  service_connection.py  user.py
backend/app/schemas/: playlist.py  user.py
backend/app/services/: ai_service.py  integrations_service.py  metadata_service.py
backend/app/templates/: admin_dashboard.html
backend/core/: __init__.py  ai.py  auth.py  cli.py  client.py  metadata.py
backend/core/providers/: base.py  discogs.py  spotify.py
backend/core/utils/: helpers.py
backend/tests/: conftest.py  test_admin.py  test_admin_api.py  test_admin_endpoints_extra.py  test_ai.py  test_ai_prompt_optimization.py  test_ai_service_extra.py  test_api.py  test_auth.py  test_cli.py  test_core.py  test_core_main.py  test_db.py  test_discogs_provider.py  test_distributed_lock.py  test_endpoint_rate_limits.py  test_error_sanitizer.py  test_exception_handler.py  test_exceptions.py  test_integrations_extra.py  test_lifespan.py  test_logging.py  test_metadata.py  test_metadata_enrichment.py  test_metadata_service_stabilization.py  test_playlist_endpoints_extra.py  test_playlist_management.py  test_playlist_model_lifecycle.py  test_playlist_validation.py  test_postgres_optimization.py  test_providers.py  test_proxy_headers.py  test_rate_limit.py  test_rate_limiting.py  test_services.py  test_social.py  test_soft_delete_api.py  test_spotify_stabilization.py  test_tasks.py  test_token_encryption.py  (+2 more)
backend/tests/e2e/: test_api_sanity.py  test_auth_flow.py  test_sanity.py
conductor/: product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/foundation_security_20260104/: metadata.json  plan.md  spec.md
conductor/archive/playlist_lifecycle_sync_20260107/: plan.md  spec.md
conductor/archive/postgres_optimization_20260104/: metadata.json  plan.md  spec.md
conductor/archive/preemptive_formatting_20260104/: metadata.json  plan.md  spec.md
conductor/archive/user_identity_privacy_20260105/: plan.md  spec.md
conductor/archive/workspace_cleanup_20260104/: metadata.json
conductor/code_styleguides/: python.md  typescript.md
conductor/tracks/advanced_metadata_matching/: plan.md  spec.md
conductor/tracks/playlist_lifecycle_sync/: plan.md
conductor/tracks/postgres_optimization_20260104/: plan.md
conductor/tracks/preemptive_formatting_20260104/: plan.md
conductor/tracks/refactoring_and_debt/: plan.md
conductor/tracks/stabilize_core_20260102/: plan.md
conductor/tracks/tooling_and_deps/: plan.md
conductor/tracks/workspace_cleanup_20260104/: metadata.json  plan.md  spec.md
docs/research/: postgres_partitioning.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: auth.ts  playlist.ts
frontend/src/components/: DataTable.tsx  Modal.tsx
frontend/src/routes/: __root.tsx  admin.connections.tsx  admin.index.tsx  admin.playlists.tsx  admin.tsx  admin.users.tsx  auth.callback.tsx  index.tsx  login.tsx  playlists.tsx  profile.$identity.tsx  profile.$userId.tsx  profile.me.tsx  settings.tsx
frontend/src/test/: Playlists.test.tsx
frontend/src/test/e2e/: settings_sanity.spec.ts
planning/: AI_INTEGRATION_PLAN.md  DOCUMENTATION_AGENT_PLAN.md  SITE_ENHANCEMENT_PLAN.md  TODO.md  TODO_COMPLETED.md  WEB_APP_PLAN.md  WEB_APP_PLAN_COMPLETED.md
playlists/: kraftwerk-dm-cure.json
scripts/: agent_docs.py
scripts/docker/: init-db.sh
spotify_playlist_builder/: ai.py  cli.py  client.py  metadata.py
spotify_playlist_builder/utils/: helpers.py
tests/: conftest.py  test_ai.py  test_cli.py  test_core.py  test_metadata.py  test_rate_limit.py
