[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibomat"
version = "0.5.0"
description = "Universal music platform for AI-powered playlist generation and multi-service management"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dave", email = "dozier.dave@gmail.com"}
]
license = {text = "MIT"}
keywords = ["spotify", "playlist", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "spotipy",
    "python-dotenv",
    "typer",
    "tenacity",
    "google-genai>=1.56.0",
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "alembic",
    "fastapi-users[sqlalchemy]",
    "taskiq",
    "taskiq-redis",
    "redis",
    "asyncpg",
    "aiosmtplib",
    "httpx-oauth",
    "sqladmin",
    "itsdangerous",
    "cryptography",
    "pgvector",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ty",
    "httpx",  # For TestClient
    "pytest-asyncio",
    "pytest-playwright",
]

[project.scripts]
vibomat = "backend.core.main:app"

[project.urls]
Homepage = "https://github.com/dwdozier/spotify-playlist-builder"
Repository = "https://github.com/dwdozier/spotify-playlist-builder"
Issues = "https://github.com/dwdozier/spotify-playlist-builder/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = [
    "ci: marks tests as ci-only (deselect with '-m \"not ci\"')",
]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning"
]
